--- a/ParaLangShared/.classpath
+++ b/ParaLangShared/.classpath
@@ -12,5 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/commons-collections4-4.0.jar"/>
+	<classpathentry kind="lib" path="lib/minimal-json-0.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
