--- a/ParaLangCLI/.classpath
+++ b/ParaLangCLI/.classpath
@@ -5,5 +5,16 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ParaLangShared"/>
 	<classpathentry kind="lib" path="lib/jcommander-1.19.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/antlr-4.5-complete.jar"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/commons-codec-1.10.jar" sourcepath="/ParaLangShared/lib/commons-codec-1.10-sources.jar"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/commons-collections4-4.0.jar"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/commons-io-2.4.jar" sourcepath="/ParaLangShared/lib/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/commons-lang3-3.3.2.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ParaLangShared/lib/commons-lang3-3.3.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/javassist.jar" sourcepath="/javassist/src/main"/>
+	<classpathentry kind="lib" path="/ParaLangShared/lib/minimal-json-0.9.3-SNAPSHOT.jar" sourcepath="/ParaLangShared/lib/minimal-json-0.9.3-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
